--- a/config.json
+++ b/config.json
@@ -1,4 +1,4 @@
 {
   "listen":[{"addr":"0.0.0.0","port":8000}],
-  "www":[{"name":"å…±äº«æ–‡ä»¶å¤¹1","path":"D:/"},{"name":"å…±äº«æ–‡ä»¶å¤¹2","path":"E:/"}]
+  "www":[{"name":"¹²ÏíÎÄ¼ş¼Ğ1","path":"D:/"},{"name":"¹²ÏíÎÄ¼ş¼Ğ2","path":"C:/"}]
 }
