add file filter, favicon and import boostrap

--- a/config.json
+++ b/config.json
@@ -1,5 +1,6 @@
 {
   "users":[{"user": "dada","passwd": "dada"}],
   "listen":[{"addr":"0.0.0.0","port":8000}],
+  "ext_filter":".torrent",
   "www":[{"name":"共享文件夹1","path":"D:/"},{"name":"共享文件夹2","path":"C:/","owner":"dada"}]
 }
