--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
-  "users":[{"user": "dada","passwd": "dada"}],
+  "users":[{"user": "admin","passwd": "admin"},{"user": "test","passwd": "test"}],
   "listen":[{"addr":"0.0.0.0","port":8000}],
   "ext_filter":".torrent",
-  "www":[{"name":"共享文件夹1","path":"D:/"},{"name":"共享文件夹2","path":"C:/","owner":"dada"}]
+  "www":[{"name":"share_folder1","path":"D:/"},{"name":"share_folder2","path":"C:/","owner":"admin,test"}]
 }
