--- a/config.json
+++ b/config.json
@@ -2,5 +2,6 @@
   "users":[{"user": "admin","passwd": "admin"},{"user": "test","passwd": "test"}],
   "listen":[{"addr":"0.0.0.0","port":8000}],
   "ext_filter":".torrent",
+  "updir": "D:/",
   "www":[{"name":"share_folder1","path":"D:/"},{"name":"share_folder2","path":"C:/","owner":"admin,test"}]
 }
